--- a/assets/styles.css
+++ b/assets/styles.css
@@ -347,6 +347,13 @@ footer {
     border-bottom: 4px solid #252627;
 }
 
+.footer-side-1 {
+    background-image: url(../assets/images/background-1.png);
+    background-position: center;
+    background-size: 200px;
+    background-repeat: no-repeat;
+}
+
 .contact-card {
     padding: 40px 25px 22px 0;
     width: 385px;
@@ -599,6 +606,16 @@ p.contact-at {
     width: 305px;
 }
 
+.feature-side-1 {
+    padding-right: 47px;
+    border-right: 1px solid #e5e5e5;
+}
+
+.feature-side-3 {
+    padding-left: 47px;
+    border-left: 1px solid #e5e5e5;
+}
+
 .feature-sides h1 {
     text-transform: uppercase;
     font-size: 20px;
@@ -630,10 +647,7 @@ p.contact-at {
 }
 
 .feature-side-2 {
-    border-left: 1px solid #e5e5e5;
-    border-right: 1px solid #e5e5e5;
     width: 487px;
-    margin: 0 47px;
     padding: 0 47px;
 }
 
@@ -652,7 +666,6 @@ p.contact-at {
     font-weight: 400;
     margin: 0;
     padding: 27px 0 24px;
-    ;
 }
 
 .feature-blog-text .f-blog-date {
@@ -673,4 +686,135 @@ p.contact-at {
     background-color: #0093d0;
     color: #fff;
     margin: 22px 0 37px;
+}
+
+button .fa-arrow-right {
+    font-size: 15px;
+    margin-left: 12px;
+}
+
+.feature-hr {
+    border-left: 1px solid #95a2aa;
+    /* border-right: 1px solid #95a2aa; */
+}
+
+/* //////////////////////////////// Pages Page ///////////////////////////////////////////// */
+.main-pages-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.pages-main-heading {
+    font-size: 30px;
+    padding-bottom: 33px;
+}
+
+.pages-content-side-1 {
+    width: 792px;
+    padding-right: 50px;
+}
+
+.pages-content-side-2 {
+    width: 318px;
+    padding-left: 45px;
+    border-left: 1px solid #e5e5e5;
+}
+
+.pages-img img {
+    width: 100%;
+}
+
+.pages-post {
+    padding-top: 27px;
+}
+
+.pages-post .post-text {
+    font-size: 15px;
+    margin-bottom: 47px;
+}
+
+.pages-article {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 36px;
+}
+
+.pages-article-left {
+    width: 447px;
+    padding-right: 25px;
+}
+
+.pages-article-right {
+    color: #adadb5;
+    width: 298px;
+    padding-left: 15px;
+    border-left: 1px solid #d8d8d8;
+}
+
+.pages-content-side-1 img {
+    border: 1px solid #c9c9c9;
+    padding: 5px;
+}
+
+.pages-content-side-1 .picture-comprehension {
+    display: inline-block;
+    width: 480px;
+    vertical-align: top;
+    margin-left: 3px;
+}
+
+/* ////////////////////////////////////// Contact Page //////////////////////////////// */
+.contact-page-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-page-wrapper .contact-card {
+    padding-top: 0;
+}
+
+.contact-page-wrapper .contact-card h3 {
+    width: 566px;
+    margin-top: 0;
+}
+
+/* .contact-page-form {
+    width: 539px;
+} */
+
+.contact-page-form input,
+textarea {
+    display: block;
+    width: 464px;
+    height: 48px;
+    margin: 14px 0 34px;
+    border: 3px solid #e5e5e5;
+    border-radius: 5px;
+    padding-left: 14px;
+    /* margin: 47px 30px 0; */
+}
+
+.contact-page-form textarea {
+    width: 464px;
+    height: 200px;
+}
+
+.contact-page-form form {
+    border: 3px solid #e5e5e5;
+    /* padding: 44px 33px 59px; */
+    border-radius: 5px;
+    margin-bottom: 106px;
+}
+
+.contact-form-hr {
+    border: 3px solid #e9e9e9;
+}
+
+.form-data {
+    margin: 47px 30px 43px;
+}
+
+.submit {
+    margin-left: 200px;
+    margin-bottom: 60px;
 }
